--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "uuid": "^8.3.2"
   }
 }
