--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "uuid": "^8.3.2"
   }
 }
