--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
-      MONGO_INITDB_DATABASE: zoo-app-db
+      MONGO_INITDB_DATABASE: zoo
     volumes:
       - ./init-files/zoodb.js:/docker-entrypoint-initdb.d/zoodb.js:ro
+
